<resources>
    <string name="app_name">LuckyPDV</string>
    <string name="login_primary_title">APP GESTOR</string>
    <string name="login_secondary_title">Xplora</string>
    <string name="version">v.2.0.0</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Usuario</string>
    <string name="login_sign_in">Ingresar</string>
    <string name="error_empty">Campo vacio</string>
    <string name="error_email">No es un email correcto</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_fullname">user_fullname</string>
    <string name="prompt_email">user_email</string>


    <string name="menu_sign_out">Salir</string>
    <string name="menu_shops">Puntos de venta</string>
    <string name="nav_header_welcome">Bienvenido</string>
    <string name="prompt_shop_name">Nombre de la tienda</string>
    <string name="prompt_shop_address">Direccion de la tienda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyAcCKpsXabWoECEiBZ4rYoULGSox7OrGHY</string>
    <string name="menu_shop_products">Productos de la tienda</string>
    <string name="menu_shops_map">Mapa de productos</string>
    <string name="menu_shop_products_bar_title">Precios</string>
    <string name="shop_products_title">Reporte de Precios</string>
    <string name="table_header_sku">SKU</string>
    <string name="table_header_cost">P. Costo</string>
    <string name="table_header_highest">P. Rvta mayor</string>
    <string name="table_header_stock">Stock</string>
</resources>
